  * Added LISTCONFIGS to external special remote protocol. Special remote
    programs that use GETCONFIG/SETCONFIG are recommended to implement it.
  * init: Avoid an ugly error message when http remote has no git-annex
    uuid configured.
  * Support git remotes that need http basic auth to be accessed,
    using git credential to get the password.

 -- Joey Hess <id@joeyh.name>  Wed, 01 Jan 2020 12:51:40 -0400

git-annex (7.20191230) upstream; urgency=medium

  * Optimised processing of many files, especially by commands like find
    and whereis that only report on the state of the repository. Commands
    like get also sped up in cases where they have to check a lot of
    files but only transfer a few files. Speedups range from 30-100%.
  * Added build dependency on the filepath-bytestring library.
  * Fixed an oversight that had always prevented annex.resolvemerge
    from being honored, when it was configured by git-annex config.
  * annex.largefiles can be configured by git-annex config,
    to more easily set a default that will also be used by clones,
    without needing to shoehorn the expression into the gitattributes file.
    The git config and gitattributes override that.
  * annex.addunlocked can be set to an expression with the same format used by
    annex.largefiles, when you want to default to unlocking some files but
    not others.
  * annex.addunlocked can be configured by git-annex config.
  * git-annex-config --set/--unset: No longer change the local git config
    setting, except for in the special case of annex.securehashesonly.
  * Improve file ordering behavior when one parameter is "." and other
    parameters are other directories.
  * smudge bugfix: When annex.largefiles=anything, files that were already
    stored in git, and have not been modified could sometimes be converted
    to being stored in the annex. Changes in 7.20191024 made this more
    of a problem. This case is now detected and prevented.
